--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,11 +5,11 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+   
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <%= link_to 'Current Post',posts_path, class:'nav-link'  %>
+  <%= link_to 'Current Post',welcome_index_path, class:'nav-link'  %>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -48,6 +48,7 @@
     </ul>
   </div>
 </nav>
+   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
    <%= yield %>
    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </body>
