--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -4,7 +4,11 @@
 <%= @post.content%>
 <br>
 <br>
-<%= link_to "Add Comment", new_post_comment_path(post_id: @post.id) %>
+<h1>The Comments are given:</h1>
+<%= render partial: "comments/comments", locals: {commentable: @post} %>
+
+<h5>Add Comments</h5>
+<%= render partial: "comments/form", locals: {commentable: @post} %>
 <br>
 <br>
 <%= link_to 'edit' ,edit_post_path(@post) %>
