--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -22,8 +22,9 @@
   </div>
 
   <div class="actions">
+    <%= flash[:recaptcha_error] %>
+    <%= recaptcha_tags %>
     <%= f.submit "Sign up" %>
   </div>
 <% end %>
-
 <%= render "devise/shared/links" %>
