--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,8 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-   
+   <script src='https://www.google.com/recaptcha/api.js?render=6LdT-HgUAAAAAK9hnTouzSgU6gtHxqN9TITClHuz'></script>
+
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
